# Secure-With-AI

./: Dockerfile  README.md  alternatives.py  app.py  breaches.csv  entity_resolution.py  entry.sh  example_usage.py  gdpr.py  license_detection_prompt.md  licensing.py  main.py  nginx.conf  popularity.py  pyproject.toml  report_template.md  score.py  scrape_breaches.kt  scrape_breaches.py  search_vulnerabilities.py  security_analysis.py  virustotal.py  vunrabilites_search.py
.streamlit/: config.toml
cache_dir/: cache.db
licensing/: __init__.py  ai_assessment.py  crawler.py  gemini_client.py  github.py  models.py  page_extraction.py  product.py  proprietary_assessment.py  search.py  utils.py
tests/: SCORE_CALCULATION.md  test_score_calculation.py
